# CPP-Documentary

./: .gitignore  1.cpp  2_Basics.md  Advanced_C++.md  Basics.md  Basics2.md  DesignPatterns.md  GoogleTest.md  STL Algorithms.md  STL.md  boost.md  concurrency.md  format.md  main  main.cpp  rezultat_compilare1.txt  rezultat_compilare2.txt  test1  test2  text.txt  themes.txt
GTEST/PART_1/: CMakeLists.txt  README.md
GTEST/PART_1/src/: Queue.hpp
GTEST/PART_1/test/: QueueTest.cpp
GTEST/PART_2/: CMakeLists.txt  README.md
GTEST/PART_2/src/: Painter.cpp  Painter.hpp  Turtle.hpp
GTEST/PART_2/test/: TurtleMock.cpp  TurtleMock.hpp
INFO/: 5_Casting.md  6_Concurrency.md  8_Functors.md  CMake.md  GoogleTest.md  STL Iterators.md
Implementations/: main.cpp  operator_overloading.cpp  rule_of_five.cpp
MINI-PROJECTS/1_LOGGER_CLASS/: logger  logger.cpp  logger.hpp  makefile
exercises/: algorithms  algorithms.cpp  ex1  ex1.cpp  ex2  ex2.cpp  ex3  ex3.cpp  function  function.cpp  main.cpp  new  new.cpp
